# agentic_ai_for_environment_gpt

./: README.md  pyproject.toml
diagrams/: architecture.md
logs/: evaluation_monitoring_log.json
reports/: environmental_assessment_report.json
src/agentic_env_ai/: agents.py  demo.py  evaluate.py  models.py  orchestrator.py
tests/: test_workflow.py
